feat: [site] implement file tree and note preview using mock data

--- a/web/src/assets/styles/main.css
+++ b/web/src/assets/styles/main.css
@@ -62,6 +62,11 @@ body {
   }
 }
 
+.separator-line {
+  width: 100%;
+  color: var(--color-text-pri);
+} 
+
 .vertical-line {
   width: 2px;
   top: 0;
