--- a/web/src/assets/styles/main.css
+++ b/web/src/assets/styles/main.css
@@ -15,6 +15,9 @@
   --color-text-pri: #161616;
   --color-text-sec: #8a8a8a;
   --color-text-field: #f0f0f0;
+
+  /* 提示文本色 */
+  --color-text-trifle: #b7b7b7;
   
   --color-line: #d2d2d2;
   --color-theme: #708e56;
