feat: [site] optimized the style of fsNodeComp, show the file suffix and fix sidebar layout issue

--- a/web/src/assets/styles/comps/sidebar.css
+++ b/web/src/assets/styles/comps/sidebar.css
@@ -8,8 +8,15 @@
 
 .file-tree-header {
 	height: 50px;
+  flex-shrink: 0;
+}
+
+.file-tree-wrapper {
+  width: 250px;
+  max-width: 300px;
 }
 
 .file-tree-container {
-	overflow-y: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
