--- a/web/src/assets/styles/base/baseComp.css
+++ b/web/src/assets/styles/base/baseComp.css
@@ -72,7 +72,7 @@ button.cancel {
 
 button.confirm {
   color: var(--color-bg-pri);
-  background-color: var(--color-text-pri);
+  background-color: var(--color-action);
   border-radius: 6px;
   transition: opacity 0.3s ease;
 }
