--- a/web/src/assets/styles/views/login.css
+++ b/web/src/assets/styles/views/login.css
@@ -69,5 +69,6 @@
   font-size: 1.1rem;
   font-weight: bold;
   padding: 8px 80px;
-  border-radius: 10px;
+  border-radius: 10px !important;
+  background-color: var(--color-text-pri) !important;
 }
