--- a/web/src/assets/styles/comps/nodeEditor.css
+++ b/web/src/assets/styles/comps/nodeEditor.css
@@ -1,7 +1,3 @@
-.is-resizing {
-  user-select: none;
-  cursor: col-resize;
-}
 
 /* 编辑器部分 */
 
@@ -14,7 +10,7 @@
   overflow: hidden; 
 }
 
-.editor-header {
+.container-header {
   height: 48px;
 	border-bottom: 1px solid var(--color-line);
   box-sizing: border-box;
