--- a/web/src/assets/styles/main.css
+++ b/web/src/assets/styles/main.css
@@ -5,11 +5,13 @@
 @import url('@/assets/styles/comps/fsNode.css');
 @import url('@/assets/styles/comps/nodeEditor.css');
 @import url('@/assets/styles/comps/uploadModal.css');
+@import url('@/assets/styles/comps/ghostButton.css');
 
 @import url('@/assets/styles/base/inputField.css');
 @import url('@/assets/styles/base/baseModal.css');
 @import url('@/assets/styles/base/baseComp.css');
 @import url('@/assets/styles/base/font.css');
+
 
 
 :root {
