--- a/web/src/assets/styles/comps/ghostButton.css
+++ b/web/src/assets/styles/comps/ghostButton.css
@@ -8,6 +8,7 @@
   gap: 8px;  
   padding: 2px 16px;
   border-width: 6px;
+  opacity: 1;
 
   background-color: transparent;
   border: 1.5px solid var(--btn-main-color);
@@ -15,7 +16,12 @@
   border-radius: 6px;
   
   cursor: pointer;
-  transition: all 0.2s ease-in-out;
+  will-change: background-color, color, border-color, opacity;
+  transition: 
+    background-color 0.4s ease-in-out, 
+    color 0.4s ease-in-out, 
+    border-color 0.4s ease-in-out, 
+    opacity 0.4s ease-in-out;
   user-select: none;
 }
 
@@ -33,8 +39,7 @@
 }
 
 .ghost-btn:not(:disabled):active {
-  transform: translateY(1px);
-  opacity: 0.9;
+  opacity: 1;
 }
 
 .ghost-btn:disabled {
