--- a/web/src/assets/styles/comps/nodeEditor.css
+++ b/web/src/assets/styles/comps/nodeEditor.css
@@ -86,7 +86,8 @@
   /* padding-left: 24px;
   padding-right: 24px; */
   margin-top: 12px;
-
+  content-visibility: auto; 
+  contain: layout paint style;
   overflow-y: scroll;
   overflow-x: hidden;
   white-space: normal;
@@ -113,12 +114,6 @@
   word-break: break-word;
   overflow-wrap: break-word;
   text-align: left;
-}
-
-.note-preview 
-h1 { 
-  font-size: 1.5rem; 
-  margin-top: 0; 
 }
 
 /* 淡入淡出动画 */
