--- a/web/src/assets/styles/main.css
+++ b/web/src/assets/styles/main.css
@@ -12,6 +12,7 @@
 @import url('@/assets/styles/base/baseModal.css');
 @import url('@/assets/styles/base/baseComp.css');
 @import url('@/assets/styles/base/font.css');
+@import url('@/assets/styles/base/markdown.css');
 
 
 
@@ -21,6 +22,7 @@
   --color-bg-field: #f0f0f0;
   --color-bg-muted: #999999;
   --color-bg-selected: #e1e1e1;
+  --color-bg-dark: rgba(0, 0, 0, 0.08);
 
   --color-text-pri: #242424;
   --color-text-sec: #797979;
@@ -46,10 +48,11 @@
   --color-action-light: #ecf5ff;
 }
 
-	/* background-color: var(--color-bg-pri); */
 
-body {
-  /* background-color: blue !important; */
+body,
+html {
+	background-color: var(--color-bg-pri) !important;
+
   overflow: hidden;
   user-select: none;
   transition: background-color 0.7s ease;
