--- a/web/src/assets/styles/comps/inputUnderline.css
+++ b/web/src/assets/styles/comps/inputUnderline.css
@@ -61,7 +61,7 @@
   
   transform: scaleX(0);
   transform-origin: left;
-  transition: transform 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: transform 0.5s ease;
   
   z-index: 1;
 }
