--- a/web/src/assets/styles/views/login.css
+++ b/web/src/assets/styles/views/login.css
@@ -47,16 +47,31 @@
 
 .auth-form .links-row button,
 .auth-form .links-row span {
-  font-size: 0.85rem;
   color: var(--color-text-sec);
   text-decoration: none;
   font-weight: 600;
-  border-bottom: 1px solid transparent;
-  transition: border-color 0.3s ease;
 }
 
-.auth-form .links-row button:hover {
-  border-bottom-color: var(--color-text-sec);
+.auth-form .links-row button {
+  position: relative;
+}
+
+.auth-form .links-row button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-text-sec);
+
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+}
+
+.auth-form .links-row button:hover::after {
+  transform: scaleX(1);
 }
 
 .btn-container {
